--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,3 +64,27 @@ input, select {
     padding: 0 1rem 1rem;
     border-bottom: 1px solid #ccc;
 }
+
+/*Todo form*/
+
+#todo-form, #edit-form {
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+} 
+
+#todo-form p, #edit-form p {
+    margin-bottom: .5rem;
+    font-weight: bold;    
+}
+
+.form-control {
+    display: flex;
+}
+
+.form-control input {
+    margin-right: .3rem;
+}
+
+#cancel-edit-btn {
+    margin-top: 1rem;
+}
