--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,3 +88,45 @@ input, select {
 #cancel-edit-btn {
     margin-top: 1rem;
 }
+
+/*Todo Toolbar*/
+
+#toolbar {
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+    display: flex;
+}
+
+#toolbar h4 {
+    margin-bottom: .5rem;
+}
+
+.search {
+    border-right: 1px solid #ddd;
+    padding-right: 1rem;
+    margin-right: 1rem;
+    width: 65%;
+    flex-direction: column;
+}
+
+.search form {
+    display: flex;
+}
+
+.search input {
+    width: 100%;
+    margin-right: 0.3rem;
+}
+
+#filter {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+}
+
+#filter-select {
+    flex: 1;
+}
+
+/*todo list*/
+
